# local-RAG

./: .gitignore  README.md  chat.py  chat_vm.py  config.py  pyproject.toml  utils.py  vectorizer.py
